fixed alignment issue and tooltip overflow (#2939)

--- a/src/components/ui/Popover/index.scss
+++ b/src/components/ui/Popover/index.scss
@@ -38,7 +38,6 @@
 
 .customSize {
   max-width: 620px;
-  height: 110px;
   @media screen and (max-width: 480px) {
     height: unset;
     width: unset;
